src/objects/Flow_Letterhead_Setting__mdt.object
<CustomObject>
    <description>Stores the styles and images for the flow letterhead</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field specifies whether the letterhead is available to display.</description>
        <inlineHelpText>This field specifies whether the letterhead is available to display. The default value is false.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alignment__c</fullName>
        <defaultValue>&apos;center&apos;</defaultValue>
        <description>This field specifies the horizontal alignment style of the letterhead.</description>
        <inlineHelpText>This field specifies the horizontal alignment style of the letterhead. The default value is &apos;center&apos;.</inlineHelpText>
        <label>Horizontal Alignment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>left</fullName>
                </value>
                <value>
                    <fullName>center</fullName>
                    <default>true</default>
                    <label>center</label>
                </value>
                <value>
                    <fullName>right</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Background_color__c</fullName>
        <defaultValue>&apos;rgba(255, 255, 255, 0.3)&apos;</defaultValue>
        <description>This field specifies the background-color style property of the letterhead.</description>
        <inlineHelpText>This field specifies the background-color style property of the letterhead. The default value is rgba(255, 255, 255, 0.3)</inlineHelpText>
        <label>Background color</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Background_image_url__c</fullName>
        <description>This field specifies the background-url property of the letterhead.</description>
        <inlineHelpText>This field specifies the background-url property of the letterhead. It could be a static resources image (/resource/image_link) or an external link.</inlineHelpText>
        <label>Background image url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Background_position__c</fullName>
        <description>This field specifies the background-position style property.</description>
        <inlineHelpText>This field specifies the background-position style property.</inlineHelpText>
        <label>Background position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>top left</fullName>
                </value>
                <value>
                    <fullName>top center</fullName>
                    <default>true</default>
                    <label>top center</label>
                </value>
                <value>
                    <fullName>top right</fullName>
                </value>
                <value>
                    <fullName>center left</fullName>
                </value>
                <value>
                    <fullName>center center</fullName>
                </value>
                <value>
                    <fullName>center right</fullName>
                </value>
                <value>
                    <fullName>bottom left</fullName>
                </value>
                <value>
                    <fullName>bottom center</fullName>
                </value>
                <value>
                    <fullName>bottom right</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Background_repeat__c</fullName>
        <description>This field specifies the background-repeat style property.</description>
        <inlineHelpText>This field specifies the background-repeat style property.</inlineHelpText>
        <label>Background repeat</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>repeat</fullName>
                </value>
                <value>
                    <fullName>repeat-x</fullName>
                </value>
                <value>
                    <fullName>repeat-y</fullName>
                </value>
                <value>
                    <fullName>no-repeat</fullName>
                    <default>true</default>
                    <label>no-repeat</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Background_size__c</fullName>
        <description>This field specifies the background-size style property.</description>
        <inlineHelpText>This field specifies the background-size style property.</inlineHelpText>
        <label>Background size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>auto</fullName>
                    <default>true</default>
                    <label>auto</label>
                </value>
                <value>
                    <fullName>cover</fullName>
                </value>
                <value>
                    <fullName>contain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Font_color__c</fullName>
        <defaultValue>&apos;#333333&apos;</defaultValue>
        <description>This field specifies the headline text font colour.</description>
        <inlineHelpText>This field specifies the headline text font colour. The default value is #333333.</inlineHelpText>
        <label>Font color</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_size__c</fullName>
        <defaultValue>20</defaultValue>
        <description>This field specifies the headline text font size (px)</description>
        <inlineHelpText>This field specifies the headline text font size (px). The default value is 16.</inlineHelpText>
        <label>Font size</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Headline__c</fullName>
        <defaultValue>&apos;Headline&apos;</defaultValue>
        <description>This field specifies the headline text.</description>
        <inlineHelpText>This field specifies the headline text. The default value is &quot;Headline&quot;.</inlineHelpText>
        <label>Headline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Height_px__c</fullName>
        <defaultValue>115</defaultValue>
        <description>Specify the height of the letter head component.</description>
        <inlineHelpText>Specify the height of the letter head component. Default value is 115</inlineHelpText>
        <label>Height (px)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Logo_height_px__c</fullName>
        <defaultValue>60</defaultValue>
        <description>This field specifies the logo height (px).</description>
        <inlineHelpText>This field specifies the logo height (px). The default value is 60.</inlineHelpText>
        <label>Logo height(px)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Logo_image_url__c</fullName>
        <description>This field specifies the logo image url.</description>
        <inlineHelpText>This field specifies the logo image url. It could be a static resources image (/resource/image_link) or an external link.</inlineHelpText>
        <label>Logo image url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Padding_style__c</fullName>
        <description>This field specifies the padding style of the letterhead.</description>
        <inlineHelpText>This field specifies the padding style of the letterhead. The default value is &apos;small&apos;.</inlineHelpText>
        <label>Padding style</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>x-small</fullName>
                </value>
                <value>
                    <fullName>small</fullName>
                    <default>true</default>
                    <label>small</label>
                </value>
                <value>
                    <fullName>medium</fullName>
                </value>
                <value>
                    <fullName>large</fullName>
                </value>
                <value>
                    <fullName>x-larger</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vertical_Alignment__c</fullName>
        <defaultValue>&apos;top&apos;</defaultValue>
        <description>This field specifies the vertical alignment style of the letterhead. The default value is &apos;top&apos;.</description>
        <inlineHelpText>This field specifies the vertical alignment style of the letterhead.</inlineHelpText>
        <label>Vertical Alignment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>top</fullName>
                    <default>true</default>
                    <label>top</label>
                </value>
                <value>
                    <fullName>middle</fullName>
                </value>
                <value>
                    <fullName>bottom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Flow Letterhead Setting</label>
    <pluralLabel>Flow Letterhead Settings</pluralLabel>
</CustomObject>